# dhat-stack

./: .gitignore  Dockerfile  README.md  fly.toml  manage.py  pyproject.toml  requirements.txt  startup.sh
components/counter/: counter.html  counter.py
components/timer/: timer.html  timer.js  timer.py
dhat_stack/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/: _navbar.html  base.html  index.html  todo.html
templates/registration/: _login-partial.html  _signup-partial.html  login.html
theme/static_src/: tailwind.config.js
todo/: models.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_todo_user.py
